# nCine-android-libraries

./: CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: android.yml
cmake/: arch_arm64-v8a.cmake  arch_armeabi-v7a.cmake  arch_x86_64.cmake  box2d.cmake  crosscompile_args.cmake  curl.cmake  lua.cmake  ogg.cmake  openal-soft.cmake  png.cmake  vorbis.cmake  webp.cmake
patches/: CMakeLists_lua.txt  CMakeLists_webp.txt  box2d.patch  box2d_242.patch  lua_liolib.patch  ogg.patch  openal-soft.patch  png.patch  vorbis.patch  webp.patch
